# Resume-Shortlister

./: README.md  pyproject.toml  requirement.txt  tempCodeRunnerFile.py
